[gd_scene load_steps=2 format=3 uid="uid://de8rmgfwo5e4p"]

[ext_resource type="Script" path="res://Scenes/DamageNumbers/Code/damageNumbers.gd" id="1_4bq7k"]

[node name="DamageNumbers" type="Marker2D"]
script = ExtResource("1_4bq7k")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
